# the-cc-harness

./: .gitignore  README.md  install.sh  pyproject.toml
dashboard/backend/: main.py
dashboard/frontend/: .gitignore  app.js  index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
dashboard/frontend/src/: App.tsx  index.css  main.tsx
dashboard/frontend/src/api/: agent-view.ts  agents.ts  arsenal.ts  chat.ts  client.ts  equipment.ts  events.ts  fleet.ts  fs.ts  index.ts  machines.ts  projects.ts  proposals.ts  roles.ts  stats.ts  tasks.ts  types.ts
docs/: architecture.html  e2e-test-trace.md  long-run-test-report.md  quickstart.md  scenario-full-walkthrough.md
harness/: __init__.py  _util.py  arsenal.py  budget.py  checkpoint.py  cli.py  config.py  control.py  digest.py  equipment.py  eventlog.py  heartbeat.py  identity.py  liveness.py  mailbox.py  notify.py  project.py  proposals.py  registry.py  remote.py  transcript.py  wakeup.py
hooks/: on_compact.sh  post_tool_use.sh  pre_tool_use.sh  session_start.sh
roles/: _base-preamble.md  arsenal-curator.md  critic.md  frontend-dev.md  orchestrator.md  researcher.md  seo-specialist.md
skill/harness/: SKILL.md
skill/harness-conventions/: SKILL.md
skill/harness/tools/: _common.py  arsenal_add.py  arsenal_get.py  arsenal_search.py  checkpoint_read.py  checkpoint_update.py  notify_human.py  project_state_read.py  project_state_update.py  propose_role_update.py  propose_skill.py  receive_messages.py  request_budget_extension.py  send_message.py
slash-commands/: inbox.md
(+58 files in other folders)
